// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom description 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Custom Description
  </div>
  <div
    className="link"
  />
</div>
`;

exports[`Test custom error 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Custom Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  />
</div>
`;

exports[`Test custom link 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  >
    Custom Link
  </div>
</div>
`;

exports[`Test custom title 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Custom Title
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  />
</div>
`;

exports[`Test default 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  />
</div>
`;
